# databases_public_policy

./: .gitignore  README.md
assignment1/: q1.sql  q10.sql  q2.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
assignment2/: a2_skeleton.ipynb  co2_and_population.db  integrated_co2_data.csv  pyproject.toml  un_co2_data.csv
assignment2/Data/: co2_and_population.db
assignment3/: .gitignore  a3_skeleton (1).ipynb  pyproject.toml  requirements.txt
assignment6/: part1.csv  part2.csv  part2_choropleth.html  part2_choroplethv2.html  part3q1.csv  part3q2.csv  part3q3.csv  pyproject.toml  requirements-1-1 (1).txt  tourist_locations-1.geojson
assignment7/: a7_extension (1)-1.ipynb  a7_skeleton (1).ipynb  app (2) (1).py  pyproject.toml  requirements-2 (1).txt
